--- a/AutoCorrectUsingNLP.ipynb
+++ b/AutoCorrectUsingNLP.ipynb
@@ -6,7 +6,7 @@
       "name": "AutoCorrectUsingNLP.ipynb",
       "provenance": [],
       "mount_file_id": "1wxFH2DY7r0G_4MXslTNnlAkFbLfMmHDZ",
-      "authorship_tag": "ABX9TyNz+fQSXsDHg8gGYRouIY9O",
+      "authorship_tag": "ABX9TyNzTJRv4UNxiRpGQ21DO5iU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,28 +95,25 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "\n",
+        "word_freq_dict = {}  \n",
+        "word_freq_dict = Counter(words)\n",
+        "print(word_freq_dict.most_common()[0:10])"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 287
+          "base_uri": "https://localhost:8080/"
         },
         "id": "-OVqva0zDACq",
-        "outputId": "6037be99-6210-4035-8c5b-d5acd8bb6231"
+        "outputId": "6e1b1e57-f753-4665-fffe-9465ff3d8b6d"
       },
-      "execution_count": 16,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-aa8689dd37d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/content/book.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m    242\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0m_SparseArray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 244\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"module 'pandas' has no attribute '{name}'\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    245\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'read'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('the', 14703), ('of', 6742), ('and', 6517), ('a', 4799), ('to', 4707), ('in', 4238), ('that', 3081), ('it', 2534), ('his', 2530), ('i', 2120)]\n"
           ]
         }
       ]
