--- a/AutoCorrectUsingNLP.ipynb
+++ b/AutoCorrectUsingNLP.ipynb
@@ -6,7 +6,7 @@
       "name": "AutoCorrectUsingNLP.ipynb",
       "provenance": [],
       "mount_file_id": "1wxFH2DY7r0G_4MXslTNnlAkFbLfMmHDZ",
-      "authorship_tag": "ABX9TyNzTJRv4UNxiRpGQ21DO5iU",
+      "authorship_tag": "ABX9TyNQOewNamYwCckmoTdZRNIi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,10 +121,47 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "\n",
+        "probs = {}     \n",
+        "Total = sum(word_freq_dict.values())    \n",
+        "for k in word_freq_dict.keys():\n",
+        "    probs[k] = word_freq_dict[k]/Total"
       ],
       "metadata": {
         "id": "pH2WaRW0EF6p"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def my_autocorrect(input_word):\n",
+        "    input_word = input_word.lower()\n",
+        "    if input_word in V:\n",
+        "        return('Your word seems to be correct')\n",
+        "    else:\n",
+        "        similarities = [1-(textdistance.Jaccard(qval=2).distance(v,input_word)) for v in word_freq_dict.keys()]\n",
+        "        df = pd.DataFrame.from_dict(probs, orient='index').reset_index()\n",
+        "        df = df.rename(columns={'index':'Word', 0:'Prob'})\n",
+        "        df['Similarity'] = similarities\n",
+        "        output = df.sort_values(['Similarity', 'Prob'], ascending=False).head()\n",
+        "        return(output)"
+      ],
+      "metadata": {
+        "id": "Zf65iOx4HyCg"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "lALqA85_IeQS"
       },
       "execution_count": null,
       "outputs": []
